Mapyrus Change History
Copyright (C) 2003 - 2013 Simon Chenery <simoc@users.sourceforge.net>

1.301, May 2013

* Accept MULTIPOINT ((1 2),(3 4)) format OCG WKT geometry strings too.
* Upgrade to Java version 1.6.
* Upgrade to JTS Topology Suite version 1.13.
* Upgrade to Servlet API 3.0 (Tomcat 7).

1.202, July 2012

* Added PDFGROUP command to enable definition of groups/layers in PDF output.

1.201, February 2012

* Allow ESRI Shape files to be accessed using a URL.
* Use better countries data from www.naturalearthdata.com.
* Add world relief image from www.naturalearthdata.com.

1.105, August 2011

* Change syntax for arrays with keys and values to {"AU":"red", "NZ":"blue"}.
* Add GEOJSON function to create a feature in GeoJSON JavaScript format.
* Allow multiple commands on one line, separated by semi-colons.
* Accept OGC Web Mapping Server (WMS) BBOX parameter for world coordinates
  in WORLDS command.
* Allow Mapyrus web server to access files in subdirectories.

1.104, June 2011

* Block invalid octal character codes such as \099.
* Add CHR function to create string from a Unicode character code.
* Fix parsing of font names from PostScript .pfa and .pfb files.
* Enable fonts with ISO-8859-15 (ISO Latin 9), ISO-8859-16 (ISO Latin 10),
  Windows 1250, Windows 1251, Windows 1252, Windows 1253, Windows 1254
  character encodings to be used in PDF output.

1.103, May 2011

* Correct display of characters with ISO-8859-2 (ISO Latin 2) encoding
  in PDF output.

1.102, May 2011

* Display extended characters with ISO-8859-2, CP1250 or other European
font encoding in PostScript and PDF output.

1.101, May 2011

* Accept Unicode characters in format \u20AC
* Allow page size in NEWPAGE to be defined with units such as "256px" or "11in"
* Allow character set to be specified for textfile and shapefile datasets.
* Allow character set to be specified for SPOOL function.

1.007, September 2010

* Fix labelling of multi-line labels containing blank lines