@@ -97,6 +97,7 @@ invalidlegendtype = Invalid legend type
 invalidlinejoin = Invalid line join for linestyle
 invalidlinestyle = Invalid linestyle
 invalidlinewidth = Invalid line width
+invalidlogspiral = Invalid logspiral values
 invalidnumber = Invalid number
 invalidoctal = Invalid octal code
 invalidogcwkb = Invalid OGC Well Known Binary geometry
