@@ -94,7 +94,8 @@ This example demonstrates drawing various shape using
 \texttt{roundedbox}, \texttt{box3d},
 \texttt{pentagon}, \texttt{spiral},
 \texttt{cylinder}, \texttt{raindrop}
-\texttt{sinewave} and \texttt{chessboard}
+\texttt{sinewave}, \texttt{chessboard}
+and \texttt{logspiral}
 commands.
 The output is as in Figure \ref{tutorialfirst4} and is
 saved in PDF format in file \texttt{tutorialfirst4.pdf}.
