@@ -7,6 +7,7 @@ Copyright (C) 2003 - 2013 Simon Chenery <simoc@users.sourceforge.net>
 * Upgrade to Java version 1.6.
 * Upgrade to JTS Topology Suite version 1.13.
 * Upgrade to Servlet API 3.0 (Tomcat 7).
+* Add LOGSPIRAL command.
 
 1.202, July 2012
 
